fix(a11y): active nav links were not contrasted enough. They are black now.

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -25,6 +25,20 @@
 
 
 /**
+ * Secondary navigation
+ */
+
+#secondary-navigation a[aria-current] {
+  color: #000;
+}
+
+#secondary-navigation a[aria-current]::before {
+  background-color: #ff7900;
+}
+
+
+
+/**
  * Footer
  */
 
